fix: allow loopback origin for local oauth